Fixed word and letter spacing

--- a/css/card-page.css
+++ b/css/card-page.css
@@ -206,6 +206,8 @@ span {
 
   .question {
     font-size: 2em;
+    letter-spacing: normal;
+    word-spacing: normal;
   }
 
   .theme {
